# uv-demo-project

./: Makefile  README.md  UV_BEST_PRACTICES.md  check_venv.py  main.py  poetry-to-uv-migration-guide.md  pyproject.toml
src/uv_demo_project/: __init__.py  class_test.py  main.py  test1.py  test_copilot.py  warp_test.py
tests/: __init__.py  test_main.py
